fixes nav z-index so no longer interfere with fade-out on posts

--- a/app/apps/themes/benji/assets/css/content-main.scss
+++ b/app/apps/themes/benji/assets/css/content-main.scss
@@ -160,7 +160,7 @@
 .post-fade-out {
   width: 100%;
   height: 11rem;
-  z-index: 99;
+  z-index: 80;
   position: absolute;
   bottom: 0px;
   background: -moz-linear-gradient(top, rgba(#ffffff,0) 0%, rgba(#ffffff,1) 100%);
